--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e4d357b
+	base = 568e9a0
 	trimbase = 
 	parent = debian/kinetic/sparse_bundle_adjustment
-	previous = 
+	previous = e4d357b
