--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2b9e0e8
+	base = e67d579
 	trimbase = 
 	parent = debian/kinetic/sparse_bundle_adjustment
-	previous = 
+	previous = 2b9e0e8
