--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f366fa2
+	base = 735957a
 	trimbase = 
 	parent = release/kinetic/sparse_bundle_adjustment
-	previous = 
+	previous = f366fa2
