--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 15e2a6f
+	base = b903b33
 	trimbase = 
 	parent = rpm/kinetic/sparse_bundle_adjustment
-	previous = 
+	previous = 15e2a6f
