--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ed92b7
+	base = edb8735
 	trimbase = 
 	parent = debian/jade/sparse_bundle_adjustment
-	previous = 
+	previous = 9ed92b7
