--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d0d1f0d
+	base = 4a03b1d
 	trimbase = 
 	parent = release/jade/sparse_bundle_adjustment
-	previous = 
+	previous = d0d1f0d
