--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e8c1c83
+	base = ecabde0
 	trimbase = 
 	parent = rpm/jade/sparse_bundle_adjustment
-	previous = 
+	previous = e8c1c83
