--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fa1854a
+	base = 600a4e8
 	trimbase = 
 	parent = debian/lunar/sparse_bundle_adjustment
-	previous = 
+	previous = fa1854a
