--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bba34b5
+	base = 08d40f7
 	trimbase = 
 	parent = debian/lunar/sparse_bundle_adjustment
-	previous = 
+	previous = bba34b5
