--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 309260d
+	base = 5fba519
 	trimbase = 
 	parent = debian/melodic/sparse_bundle_adjustment
-	previous = 
+	previous = 309260d
