--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e2eba4e
+	base = 093d5ce
 	trimbase = 
 	parent = debian/melodic/sparse_bundle_adjustment
-	previous = 
+	previous = e2eba4e
