--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d40742c
+	base = 63725fd
 	trimbase = 
 	parent = release/melodic/sparse_bundle_adjustment
-	previous = 
+	previous = d40742c
