--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9aa44a9
+	base = 3cbb5eb
 	trimbase = 
 	parent = rpm/melodic/sparse_bundle_adjustment
-	previous = 
+	previous = 9aa44a9
