--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.2-0": ["Mon Aug 13 2018", "Michael Ferguson", "fergs@unboundedrobotics.com"]}
+{"0.3.2-0": ["Mon Aug 13 2018", "Michael Ferguson", "fergs@unboundedrobotics.com"], "0.4.0-0": ["Sat Aug 18 2018", "Michael Ferguson", "fergs@unboundedrobotics.com"]}
