--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(sparse_bundle_adjustment)
 
-find_package(catkin REQUIRED
-  COMPONENTS
-    cmake_modules
-)
-find_package(Eigen REQUIRED)
+find_package(catkin REQUIRED)
+find_package(Eigen3 REQUIRED)
 
-include_directories(${catkin_INCLUDE_DIRS} ${EIGEN_INCLUDE_DIRS})
-add_definitions(${EIGEN_DEFINITIONS})
+include_directories(${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
+add_definitions(${EIGEN3_DEFINITIONS})
 
 INCLUDE_DIRECTORIES(include)
 
