--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.2": ["Michael Ferguson", "fergs@unboundedrobotics.com"], "0.4.0": ["Michael Ferguson", "fergs@unboundedrobotics.com"], "0.3.0": ["Michael Ferguson", "fergs@unboundedrobotics.com"], "0.3.1": ["Michael Ferguson", "fergs@unboundedrobotics.com"]}
+{"0.4.1": ["Michael Ferguson", "mfergs7@gmail.com"], "0.4.0": ["Michael Ferguson", "fergs@unboundedrobotics.com"], "0.3.0": ["Michael Ferguson", "fergs@unboundedrobotics.com"], "0.3.1": ["Michael Ferguson", "fergs@unboundedrobotics.com"], "0.3.2": ["Michael Ferguson", "fergs@unboundedrobotics.com"]}
