--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.4.1-0": ["Tue Aug 21 2018", "Michael Ferguson", "mfergs7@gmail.com"], "0.4.0-0": ["Sat Aug 18 2018", "Michael Ferguson", "fergs@unboundedrobotics.com"], "0.3.2-0": ["Mon Aug 13 2018", "Michael Ferguson", "fergs@unboundedrobotics.com"]}
+{"0.4.1-0": ["Tue Aug 21 2018", "Michael Ferguson", "mfergs7@gmail.com"], "0.4.2-0": ["Thu Aug 23 2018", "Michael Ferguson", "mfergs7@gmail.com"], "0.4.0-0": ["Sat Aug 18 2018", "Michael Ferguson", "fergs@unboundedrobotics.com"], "0.3.2-0": ["Mon Aug 13 2018", "Michael Ferguson", "fergs@unboundedrobotics.com"]}
