Imported upstream version '0.4.3' of 'upstream'

--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,14 @@
 <package format="2">
   <name>sparse_bundle_adjustment</name>
   <description>ROS wrapper for the sparse bundle adjustment (sba) library (needed for slam_karto)</description>
-  <version>0.4.2</version>
+  <version>0.4.3</version>
   <license>BSD</license>
   <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
-  <maintainer email="lbettaieb@fetchrobotics.com">Luc Bettaieb</maintainer>
-  <maintainer email="amoriarty@fetchrobotics.com">Alexander Moriarty</maintainer>
+  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>roscpp</depend>
   <depend>eigen</depend>
   <depend>liblapack-dev</depend>
   <depend>libblas-dev</depend>
