--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,15 @@ if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 11)
 endif()
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS roscpp)
 find_package(Eigen3 REQUIRED)
+find_package(suitesparse QUIET)
+if(NOT SuiteSparse_FOUND)
+  set(SuiteSparse_LIBRARIES blas lapack cholmod cxsparse)
+endif()
 
-include_directories(${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
+include_directories(${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS} ${SuiteSparse_INCLUDE_DIRS})
 add_definitions(${EIGEN3_DEFINITIONS})
-
 INCLUDE_DIRECTORIES(include)
 
 catkin_package(
@@ -23,7 +26,7 @@ add_definitions(-DSBA_CHOLMOD)
 # SBA library
 add_library(sba src/sba.cpp src/spa.cpp src/spa2d.cpp src/csparse.cpp src/proj.cpp src/node.cpp src/sba_file_io.cpp)
 #rosbuild_add_compile_flags(sba ${SSE_FLAGS})
-target_link_libraries(sba blas lapack cholmod cxsparse)
+target_link_libraries(sba ${SuiteSparse_LIBRARIES})
 
 install(DIRECTORY include/sparse_bundle_adjustment/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
