--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,15 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 2.8.3)
 project(sparse_bundle_adjustment)
 
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 11)
-endif()
+find_package(catkin REQUIRED
+  COMPONENTS
+    cmake_modules
+)
+find_package(Eigen REQUIRED)
 
-find_package(catkin REQUIRED COMPONENTS roscpp)
-find_package(Eigen3 REQUIRED)
-find_package(suitesparse QUIET)
-if(NOT SuiteSparse_FOUND)
-  set(SuiteSparse_LIBRARIES blas lapack cholmod cxsparse)
-endif()
+include_directories(${catkin_INCLUDE_DIRS} ${EIGEN_INCLUDE_DIRS})
+add_definitions(${EIGEN_DEFINITIONS})
 
-include_directories(${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS} ${SuiteSparse_INCLUDE_DIRS})
-add_definitions(${EIGEN3_DEFINITIONS})
 INCLUDE_DIRECTORIES(include)
 
 catkin_package(
@@ -26,7 +22,7 @@ add_definitions(-DSBA_CHOLMOD)
 # SBA library
 add_library(sba src/sba.cpp src/spa.cpp src/spa2d.cpp src/csparse.cpp src/proj.cpp src/node.cpp src/sba_file_io.cpp)
 #rosbuild_add_compile_flags(sba ${SSE_FLAGS})
-target_link_libraries(sba ${SuiteSparse_LIBRARIES})
+target_link_libraries(sba blas lapack cholmod cxsparse)
 
 install(DIRECTORY include/sparse_bundle_adjustment/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
