--- a/package.xml
+++ b/package.xml
@@ -1,17 +1,20 @@
-<package format="2">
+<package>
   <name>sparse_bundle_adjustment</name>
   <description>ROS wrapper for the sparse bundle adjustment (sba) library (needed for slam_karto)</description>
-  <version>0.4.3</version>
+  <version>0.3.3</version>
   <license>BSD</license>
   <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
-  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>
+  <maintainer email="lbettaieb@fetchrobotics.com">Luc Bettaieb</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>roscpp</depend>
-  <depend>eigen</depend>
-  <depend>liblapack-dev</depend>
-  <depend>libblas-dev</depend>
-  <depend>suitesparse</depend>
+  <build_depend>cmake_modules</build_depend>
+  <build_depend>eigen</build_depend>
+  <build_depend>liblapack-dev</build_depend>
+  <build_depend>libblas-dev</build_depend>
+  <build_depend>suitesparse</build_depend>
 
+  <run_depend>liblapack-dev</run_depend>
+  <run_depend>libblas-dev</run_depend>
+  <run_depend>suitesparse</run_depend>
 </package>
