--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a90c5c0
+	base = fbd230b
 	trimbase = 
 	parent = release/noetic/sparse_bundle_adjustment
-	previous = 
+	previous = a90c5c0
