--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fa2e98c
+	base = aa33942
 	trimbase = 
 	parent = debian/noetic/sparse_bundle_adjustment
-	previous = 
+	previous = fa2e98c
