--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8f4dcd2
+	base = 11531c1
 	trimbase = 
 	parent = debian/noetic/sparse_bundle_adjustment
-	previous = 
+	previous = 8f4dcd2
