--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = df78306
+	base = 3d4b843
 	trimbase = 
 	parent = rpm/noetic/sparse_bundle_adjustment
-	previous = 
+	previous = df78306
